--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.1)
+
 project(cis29group2game)
 
-set(CMAKE_CXX_STANDARD 20)
+## If you want to link SFML statically
+# set(SFML_STATIC_LIBRARIES TRUE)
 
-add_executable(cis29group2game main.cpp)
+## In most cases better set in the CMake cache
+# set(SFML_DIR "<sfml root prefix>/lib/cmake/SFML")
+
+find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
+add_executable(SFMLTest src/main.cpp)
+target_link_libraries(SFMLTest sfml-graphics sfml-audio)
