grid with no textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ project(cis29group2game)
 # set(SFML_DIR "<sfml root prefix>/lib/cmake/SFML")
 
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
-add_executable(SFMLTest src/main.cpp)
+add_executable(SFMLTest src/main.cpp src/fxx/VertexMap.cpp src/fxx/VertexMap.h)
 target_link_libraries(SFMLTest sfml-graphics sfml-audio)
