--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,10 @@ project(cis29group2game)
 # set(SFML_DIR "<sfml root prefix>/lib/cmake/SFML")
 
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
-add_executable(SFMLTest src/main.cpp src/fxx/VertexMap.cpp src/fxx/VertexMap.h src/Characters/Character.cpp src/include/Character.h src/Characters/Knight.cpp src/include/Knight.h src/Characters/Mage.cpp src/include/Mage.h src/Characters/Tank.cpp src/include/Tank.h src/Characters/Ninja.cpp src/include/Ninja.h src/Characters/Spell.cpp src/include/Spell.h src/Characters/Castle.cpp src/include/Castle.h src/Characters/Player.cpp src/include/Player.h)
+add_executable(SFMLTest src/main.cpp src/tct/VertexMap.cpp src/tact/VertexMap.h src/tact/Characters/Character.cpp
+        src/tact/include/Character.h src/tact/Characters/Knight.cpp src/tact/include/Knight.h
+        src/tact/Characters/Mage.cpp src/tact/include/Mage.h src/tact/Characters/Tank.cpp src/tact/include/Tank.h
+        src/tact/Characters/Ninja.cpp src/include/Ninja.h src/Characters/Spell.cpp src/include/Spell.h
+        src/Characters/Castle.cpp src/include/Castle.h src/Characters/Player.cpp src/include/Player.h src/tact/test.cpp
+        include/tact/test.h)
 target_link_libraries(SFMLTest sfml-graphics sfml-audio)
