--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Project exclude paths
-/cmake-build-debug/
-/build/
-/.vscode/
-.idea
+./cmake-build-debug
+./build/
+./vscode/
+./idea/
+./bin/sfml-app
+./bin/somethingTactics.out
