added .keep files so that empty directories are added to version control, since they are required directories that should be empty.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
 # Project exclude paths
 /cmake-build-debug/
 /build/
-/.vscode/
-/.idea/
-/src/obj/
-/src/tact/obj/
+/.vscode
+/.idea
 .directory
 CMakeLists.txt
 /bin/sfml-app
 /bin/somethingTactics.out
 /lib/libgame.a
 *.o
+*.out
+# Exceptions
+!/bin/
+!/lib/
+!/src/obj/
+!/src/tact/obj/
+!.keep
